--- a/resume-code/index.html
+++ b/resume-code/index.html
@@ -92,7 +92,7 @@
           </div>
     </div>
 
-    <div>Total Visitors: <span id="visitorCount">0</span></div> <!-- Visitor counter -->
+    <div>Views: <span id="counter-number"></span></div> <!-- Visitor counter -->
 
     <script src="scripts.js"></script> <!-- Include your JavaScript file -->
 </body>
