--- a/resume-code/index.html
+++ b/resume-code/index.html
@@ -92,8 +92,8 @@
           </div>
     </div>
 
-    <div>Views: <span id="counter-number"></span></div> <!-- Visitor counter -->
+    <div class="counter-number">Couldn't read views</div> 
 
-    <script src="scripts.js"></script> <!-- Include your JavaScript file -->
+    <script src="scripts.js"></script> 
 </body>
 </html>
