--- a/resume-code/index.html
+++ b/resume-code/index.html
@@ -92,7 +92,7 @@
           </div>
     </div>
 
-    
+    <div class="counter-number" >Couldnt read views</div> 
 
     <script src="scripts.js"></script> 
 </body>
