--- a/resume-code/index.html
+++ b/resume-code/index.html
@@ -91,8 +91,10 @@
             <a href="www.linkedin.com/in/obi-mereni-45b252169" target="_blank" class="social-link linkedin">Linkedin</a>
           </div>
     </div>
+    <div class="counter-number">Total Visitors: <span id="visitorCount">0</span>
+    </div>
 
-    <div class="counter-number" >Couldnt read views</div> 
+  
 
     <script src="scripts.js"></script> 
 </body>
